--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.5",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1"
   }
 }
